# LinuxApplicationDevelopment2023

./: .gitignore
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: 1.gdb  1.res  2.gdb  2.res  Makefile  range.c
06_TracingFencing/: Makefile  move.c  remove.c
07_Environmental/: Makefile.am  configure.ac  tests.sh
07_Environmental/src/: rhasher.c
08_I18n/: README.md  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: guesser.c
09_PatchDiff/: 1.patch  2.patch  3.patch  Makefile  maze.c
10_Testing/: Makefile.am  README.md  configure.ac
10_Testing/src/: Makefile.am
10_Testing/tests/: tests.ts
11_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: guesser.c  main.dox
